js/src/tests/test262/built-ins/Error/error-message-tostring-toprimitive.js

















assert.throws(TypeError, function () {
    Error({toString: undefined, valueOf: undefined})
}, "Error should throw a TypeError in its ToPrimitive step");

reportCompare(0, 0);
